--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -90,7 +90,7 @@ I want to thank my supervisors and all the people I had the chance to work and s
 
 This thesis investigates the use of TRAM-DAGs \citep{sick2025} as a flexible approach for estimating structural equations in known directed acyclic graphs (DAGs). TRAM-DAGs offer several advantages: the model inherently knows when to control for covariates based on the DAG, is highly customizable in terms of flexibility and interpretability, and allows sampling from observational, interventional, and counterfactual distributions. We show how to incorporate ordinal predictors, model interactions, and examine how variable scaling affects interpretability.
 
-A main focus was the estimation of individualized treatment effects (ITEs) using a variety of causal machine learning (ML) models. In simulation studies, we analyzed limitations in ITE estimation and found that unmeasured effect modifiers can severely impact estimation accuracy, and that the ignorability assumption alone may not ensure unbiased results -- a concern also noted in prior research. The limitations found may also help explain the poor ITE estimation performance observed in the real-world application on the International Stroke Trial dataset \citep{chen2025}. We further demonstrated that TRAM-DAGs can be used for ITE estimation in relatively complex DAG structures, provided that the DAG is fully known and all variables are observed.
+A main focus was the estimation of individualized treatment effects (ITEs) using a variety of causal machine learning (ML) models. In simulation studies, we analyzed limitations in ITE estimation and found that unmeasured effect modifiers can severely impact estimation accuracy, and that the ignorability assumption alone may not ensure unbiased results -- a concern that has also been noted in prior research \citep{vegetabile2021}. The limitations found may also help explain the poor ITE estimation performance observed in the real-world application on the International Stroke Trial dataset \citep{chen2025}. We further demonstrated that TRAM-DAGs can be used for ITE estimation in relatively complex DAG structures, provided that the DAG is fully known and all variables are observed.
 
 While promising, TRAM-DAGs require training time due to their reliance on neural networks and, when aiming for interpretability, certain assumptions about the model structure. Future work could explore applications to more real-world data, potentially including semi-structured inputs, and further investigate ITE estimation in the presence of unmeasured interactions.
 
